--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,55 +1,65 @@
-
-.home {
-  height: 100vh;
+header{
   background: url(/src/assets/img/header.jpg);
   background-size: cover;
 }
 
-.header_container {
-  height: 100%;
-  justify-content: space-between;
+.title_header{
+  font-size: .6em;
+  color: var(--font-color) ;
+  margin: 10rem 0 2rem;
 }
-.nav_bar {
-  width: 100%;
-  display: flex;
-  height: 5rem;
-  justify-content: space-between;
-  align-items: center;
-  top: 1rem;
+/* NavMenu */
+.nav_bar{
   position: sticky;
-  background: var(--dark);
-  border-radius: .6rem
-}
-.logo_container{
-  padding-left: 1rem;
-}
-
-.menu {
-  display: flex;
+  top: 0;
+  border-radius: 1rem;
+  background: var(--dark) ;
+  height: 80px;
   align-items: center;
-}
-.menu li{
-  margin-left: 2rem;
   display: flex;
-  padding: 0 1rem;
-  align-items: center;
+  justify-content: space-between;
 }
-
+.menu{
+  display: flex;
+}
 .menu li a{
-  color: #fff;
+  color: var(--font-color);
+  padding: 1rem;
+  border-radius: 1rem;
 }
 .menu li a:hover{
-  color: aqua;
-  background: rgba(255, 255, 255, 0.3);
+  background: #000;
+  transition: .5s ease-in-out;
+
 }
 
-.title_header{
-  margin-bottom: 7em;
-  width: 100%;
-} 
-.title_header h1 {
-  line-height: 2;
-  font-weight: bolder;
-  color: #fff;
-  justify-content: flex-start;
+@media screen and (max-width: 768px) {
+  .nav_bar{
+    height: 60px;
+    justify-content: center;
+  }
+  .logo_container{
+    display: none;
+  }
+  .menu li a{
+    padding: .5rem;
+    font-size: 1rem;
+  }
+}
+@media screen and (min-width: 768px){
+  header {
+    min-height: 100vh;
+  }
+  .title_header{
+    font-size: 2rem;
+    margin: 20rem 0 2rem;
+  }
+  .menu li a{
+    font-size: 1.7rem;
+  }
+}
+@media screen and (max-width: 540px){
+  .menu li a{
+    font-size: .8rem;
+  }
 }
